Bug 119298 - Table alignment changes from automatic to left (or from left) after moving the inner table border
Summary: Table alignment changes from automatic to left (or from left) after moving th...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.4.0
Keywords:
: 118780 142591 (view as bug list)
Depends on:
Blocks: Writer-Tables-Alignment
  Show dependency treegraph
 
Reported: 2018-08-15 13:33 UTC by Telesto
Modified: 2022-03-25 16:26 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (131.35 KB, application/vnd.oasis.opendocument.text)
2018-08-15 13:33 UTC, Telesto
Details
Bibisect log (2.91 KB, text/plain)
2018-08-15 13:41 UTC, Telesto
Details
Example file (8.92 KB, application/vnd.oasis.opendocument.text)
2018-10-10 15:04 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-08-15 13:33:34 UTC
Description:
Table alignment changes from automatic to left (or from left) after moving the inner table border of an embedded table in Webview with sidebar enabled

Steps to Reproduce:
1. Open the attached file
2. Open table properties for the embedded table (automatic Alignment enabled)
3. Move the inner border of the embedded table to the left (with sidebar enabled)
4. pen table properties for the embedded table -> Alignment changes to From the left

Actual Results:
Alignment changes to From the left

Expected Results:
Automatic Alignment 


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.2.0.0.alpha0+
Build ID: c0fdcece6b886912618deee9656cb2d169a9b999
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-08-12_00:35:45
Locale: en-US (nl_NL); Calc: CL

but not in
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL
Comment 1 Telesto 2018-08-15 13:33:56 UTC
Created attachment 144196 [details]
Example file
Comment 2 Telesto 2018-08-15 13:41:08 UTC
Created attachment 144197 [details]
Bibisect log

Bisected to

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2015-05-17 22:19:02 +0900
committer	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2015-05-18 20:18:21 +0900
commit b951771244d511c140a7c84181a1e160d9ef97c1 (patch)
tree 181aba4b9ca587d55a40ecc99bb86948b889386f
parent e4fab06d82299054ddd46c7d925d300cd3d0a17d (diff)
tdf#83527 change split window expande handle to be more visible

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b951771244d511c140a7c84181a1e160d9ef97c1

Odd, however: notice the flowing: 
1. Open LibO5 disable the sidebar
2. Open the file
3. Move the inner border of the embedded table to the left
4. Enable sidebar -> cursor moves to a strange place
Comment 3 Buovjaga 2018-09-07 17:24:51 UTC
I don't see the tables in webview so I don't know how to repro. Maybe Tomaž will anyway.

Adding Cc: to Tomaž Vajngerl
Comment 4 Dieter 2018-09-07 21:31:36 UTC
I also can't see tables in webview, but perhaps thats normal, because tables are part of the header and footer in normal view.
Comment 5 Telesto 2018-09-08 06:44:47 UTC
(In reply to Buovjaga from comment #3)
Looks like the wrong sample file.. NEEDINFO for the time being
Comment 6 Xisco Faulí 2018-09-13 10:54:48 UTC
(In reply to Telesto from comment #5)
> (In reply to Buovjaga from comment #3)
> Looks like the wrong sample file.. NEEDINFO for the time being

Hi Telesto,
If you have a moment, could you please attached the correct file ?
Comment 7 Telesto 2018-10-10 15:04:51 UTC
Created attachment 145570 [details]
Example file
Comment 8 Buovjaga 2018-10-10 17:26:08 UTC
Ok I repro with the new file. Webview was not needed.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: b7835c1d7465db6bea4cc80b6d0c2f71596938f1
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 8 October 2018
Comment 9 Buovjaga 2018-10-10 17:27:53 UTC
Sidebar was not needed either.
Comment 10 Buovjaga 2018-10-10 17:28:27 UTC
*** Bug 118780 has been marked as a duplicate of this bug. ***
Comment 11 QA Administrators 2019-10-11 02:34:59 UTC Comment hidden (obsolete)
Comment 12 Dieter 2021-06-15 06:44:35 UTC Comment hidden (obsolete)
Comment 13 Dieter 2021-06-15 06:46:17 UTC
Still present in

Version: 7.1.4.1 (x64) / LibreOffice Community
Build ID: f67b1ddedeb24fca1c5938e7cebfab73d708b35b
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

Also independend from an embedded table

Simplified steps to reproduce:
1. Open Writer
2. Insert a table (2x2)
3. Open table properties -> Table tab - Notice alignment automatic
4. Close the dialog by pressing cancel
5. Drag the inner border to left or right with the mouse
6. Open table properties -> Table tab -> Notice from left being enabled
Comment 14 Telesto 2021-06-15 07:26:15 UTC
(In reply to Dieter from comment #13)
> Still present in
> 
> Version: 7.1.4.1 (x64) / LibreOffice Community
> Build ID: f67b1ddedeb24fca1c5938e7cebfab73d708b35b
> CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL:
> win
> Locale: de-DE (de_DE); UI: de-DE
> Calc: threaded
> 
> Also independend from an embedded table
> 
> Simplified steps to reproduce:
> 1. Open Writer
> 2. Insert a table (2x2)
> 3. Open table properties -> Table tab - Notice alignment automatic
> 4. Close the dialog by pressing cancel
> 5. Drag the inner border to left or right with the mouse
> 6. Open table properties -> Table tab -> Notice from left being enabled

This is bug 142591 (more recently introduced; 6.3 branch); maybe related maybe not
It's even Windows only
Comment 15 Dieter 2021-06-15 10:47:28 UTC
*** Bug 142591 has been marked as a duplicate of this bug. ***
Comment 16 Justin L 2022-03-05 11:22:41 UTC
The identified commit seemed to come from a file that didn't even demonstrate the problem. I can reproduce in LO 3.6 with Sample4.odt from comment 7. Assume inherited from OOo.

For a code pointer, we can look at bug 120026. Unfortunately, Writer thinks the table size has changed slightly, so the fix isn't trivial.
Comment 17 Commit Notification 2022-03-17 05:36:46 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ba3c85aad33ad3eded935185686dfcaaa7fcaa8

tdf#119298 sw: keep automatic position on trivial width change

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Dieter 2022-03-25 16:26:53 UTC
VERIFIED with

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e8c95b796626cb9db163f5d563fa67f38a5e92b0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Justin, thanks for fixing it!