tdf#119298 sw: keep automatic position on trivial width change

The issue here was that simply moving the border around
(which shouldn't change the table size at all)
triggered a miniscule difference in reported table width.

Well, that is not enough reason to change away from automatic
positioning now is it?

Change-Id: Ib40c50a1069d88fa22f4791366eb0a50b4e9b11d